--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,9 +3,15 @@ use_frameworks!
 target 'SnapLayout_Example' do
   pod 'SnapLayout', :path => '../'
 
-  target 'SnapLayout_Tests' do
-    inherit! :search_paths
-
-    
+target 'SnapLayout_ExampleTests' do
+   inherit! :search_paths
   end
 end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
+  end
