--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,18 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+sudo: false
+osx_image: xcode8
+language: swift
+podfile: Example/Podfile
+before_install:
+  - gem install slather --no-ri --no-rdoc
+  - gem install cocoapods
+  - gem install xcpretty
+  - pod install --project-directory=Example
+
 script:
-- set -o pipefail && xcodebuild test -workspace Example/SnapLayout.xcworkspace -scheme SnapLayout-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+    - set -o pipefail && xcodebuild test -workspace Example/SnapLayout.xcworkspace -scheme Pods-SnapLayout_ExampleTests -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.0' ONLY_ACTIVE_ARCH=NO | xcpretty
+    - pod lib lint --allow-warnings # warning states variable should be immutable but the variable does change. Seems to be lint issue
+
+after_success: slather
