--- a/.slather.yml
+++ b/.slather.yml
@@ -2,5 +2,5 @@ coverage_service: coveralls
 xcodeproj: Example/SnapLayout.xcodeproj
 workspace: Example/SnapLayout.xcworkspace
 source_directory: Pod/Classes
-scheme: SnapLayout-Example
+scheme: SnapLayout_ExampleTests
 binary_basename: SnapLayout
