--- a/Example/Podfile
+++ b/Example/Podfile
@@ -13,6 +13,7 @@ end
 
 target 'SnapLayout_ExampleTests' do
    platform :ios, '9.0'
+   pod 'SnapLayout', :path => '../'
    inherit! :search_paths
 end
 
