--- a/Example/SnapLayout.xcodeproj/xcshareddata/xcschemes/SnapLayout_ExampleTests.xcscheme
+++ b/Example/SnapLayout.xcodeproj/xcshareddata/xcschemes/SnapLayout_ExampleTests.xcscheme
@@ -5,29 +5,12 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7F589126E4FFDB59524EDC968B1B9902"
-               BuildableName = "SnapLayout.framework"
-               BlueprintName = "SnapLayout"
-               ReferencedContainer = "container:Pods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -36,17 +19,17 @@
                BlueprintIdentifier = "05D8B3561E8E1D7C00E5819A"
                BuildableName = "SnapLayout_ExampleTests.xctest"
                BlueprintName = "SnapLayout_ExampleTests"
-               ReferencedContainer = "container:../SnapLayout.xcodeproj">
+               ReferencedContainer = "container:SnapLayout.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7F589126E4FFDB59524EDC968B1B9902"
-            BuildableName = "SnapLayout.framework"
-            BlueprintName = "SnapLayout"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "Example-iOS.app"
+            BlueprintName = "Example-iOS"
+            ReferencedContainer = "container:SnapLayout.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -62,15 +45,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7F589126E4FFDB59524EDC968B1B9902"
-            BuildableName = "SnapLayout.framework"
-            BlueprintName = "SnapLayout"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "Example-iOS.app"
+            BlueprintName = "Example-iOS"
+            ReferencedContainer = "container:SnapLayout.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -80,15 +64,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7F589126E4FFDB59524EDC968B1B9902"
-            BuildableName = "SnapLayout.framework"
-            BlueprintName = "SnapLayout"
-            ReferencedContainer = "container:Pods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
