--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ script:
     - pod lib lint --allow-warnings # warning states variable should be immutable but the variable does change. Seems to be lint issue
 
 after_success: slather
+notifications:
+  email: false
